--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,25 +2,64 @@
 .main-container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    h1, h2, h3, h4 {
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    h2, h3 {
+        margin-top: 0;
+    }
+
+    h1 {
+        margin-bottom: 10px;
+        border-bottom: solid black 1px;
+        padding: 10px;
+    }
+
+    h3 {
+        margin-top: 5px;
+    }
 
     form {
-        margin-top: 20px;
         flex-direction: column;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 15px;
+        padding: 15px;
+        // background: rgb(194, 187, 187);
+        border: solid 1px gray;
+        border-radius: 10px;
+        width: 500px;
 
 
         .input-label-container {
             margin: 5px;
+            width: 100%;
+
+            input {
+                width: 100%;
+                height: 30px;
+            }
         }
 
         button {
-            margin-top: 5px;
+            margin-top: 10px;
+            height: 30px;
+            border-radius: 5px;
         }
     }
 
     label {
         display: block;
+    }
+
+
+    .image-anchor-container {
+        margin-top: 20px;
     }
 }
