--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,10 +21,14 @@
 
   
   <ng-container *ngIf="imgUrl">
-    <a class="image-anchor-container" [href]="pageUrl" target="_blank">
-      <img [src]="imgUrl" alt="generated meme">
-    </a>
-    <h4>Select image to go to this meme's imgflig.com page.<br>(only people with its exact link can view it)</h4>
+
+    <div class="image-anchor-container">
+      <a [href]="pageUrl" target="_blank">
+        <img [src]="imgUrl" alt="generated meme">
+      </a>
+      <h4>Select image to go to this meme's imgflig.com page.<br>(only people with its exact link can view it)</h4>
+    </div>
+    
   </ng-container>
   
 </div>
