--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,8 +44,9 @@
             width: 100%;
 
             input {
-                width: 100%;
+                width: 95%;
                 height: 30px;
+                font-size: 17px;
             }
         }
 
