--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
         <img [src]="imgUrl" alt="generated meme">
       </a>
       <h4>Select image to go to this meme's imgflig.com page.<br>(only people with its exact link can view it)</h4>
+      <h5>Refresh the page to make another meme! 😁</h5>
     </div>
     
   </ng-container>
